# perftools

./: .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  CNAME  README.md  Rakefile  index.html  params.json
angular_ui/: index.html
angular_ui/js/: d3.js  data_set.js  external.js  main.js  result-chart.js  result-controller.js  result-range.js  result-view.js  result.js  util.js  zoom-chart.js
angular_ui/templates/: view-editor.html
bindings/python/: perf.py
bindings/ruby/: Gemfile
bindings/ruby/lib/: command_line_tools.rb  perf.rb
cmake/: FindPerf.cmake
core/: CMakeLists.txt  build.sh  perf.cpp  perf.h  perf.hpp  perf.pro  perf_allocator.hpp  perf_benchmark.hpp  perf_config.hpp  perf_context.hpp  perf_event.hpp  perf_global.hpp  perf_identity.hpp  perf_io.hpp  perf_json_writer.hpp  perf_meta_event.hpp  perf_single_fire_event.hpp  perf_string.hpp  perf_time.hpp  perf_util.hpp
core/cpp/: perf.hpp
core/internal/: perf.cpp  perf_allocator.h  perf_allocator.hpp  perf_config.cpp  perf_config.h  perf_config.hpp  perf_context.cpp  perf_context.h  perf_context.hpp  perf_global.h  perf_global.hpp  perf_identity.cpp  perf_identity.h  perf_identity.hpp  perf_string.hpp  perf_time.cpp  perf_time.h  perf_time.hpp
core/src/: perf.cpp  perf_config.cpp  perf_context.cpp  perf_identity.cpp  perf_json_writer.cpp  perf_meta_event.cpp  perf_single_fire_event.cpp
docs/: Doxyfile.in
doxygen/: annotated.html  classes.html  classperf_1_1basic__short__string-members.html  classperf_1_1basic__short__string.html  classperf_1_1benchmark_1_1event-members.html  classperf_1_1benchmark_1_1event.html  classperf_1_1benchmark_1_1parameters-members.html  classperf_1_1benchmark_1_1parameters.html  classperf_1_1benchmark_1_1wrapper-members.html  classperf_1_1benchmark_1_1wrapper.html  classperf_1_1benchmark__event-members.html  classperf_1_1benchmark__event.html  classperf_1_1benchmark__parameters-members.html  classperf_1_1benchmark__parameters.html  classperf_1_1config-members.html  classperf_1_1config.html  classperf_1_1context-members.html  classperf_1_1context.html  classperf_1_1detail_1_1basic__short__string-members.html  classperf_1_1detail_1_1basic__short__string.html  classperf_1_1detail_1_1event__reference-members.html  classperf_1_1detail_1_1event__reference.html  classperf_1_1detail_1_1private__dummy-members.html  classperf_1_1detail_1_1private__dummy.html  classperf_1_1event-members.html  classperf_1_1event.html  classperf_1_1identity-members.html  classperf_1_1identity.html  classperf_1_1json__writer-members.html  classperf_1_1json__writer.html  classperf_1_1meta__event-members.html  classperf_1_1meta__event.html  classperf_1_1single__fire__event-members.html  classperf_1_1single__fire__event.html  classperf_1_1time-members.html  classperf_1_1time.html  dir_4270bfced15e0e73154b13468c7c9ad9.html  files.html  functions.html  functions_func.html  (+43 more)
doxygen/search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  (+7 more)
graph_experiments/: .gitignore  bower.json  gulpfile.js  index.html  package.json  server.js
graph_experiments/server/: index.js
graph_experiments/server/lib/: session.js
graph_experiments/web/: index.jade
graph_experiments/web/partials/: GraphDirective.jade  SelectorDirective.jade  main.jade
graph_experiments/web/scripts/: App.js  Chart.js  GraphDirective.js  LineData.js  MouseInteraction.js  SelectorDirective.js  Sessions.js  StackedData.js
graph_experiments/web/stylesheets/: graph.sass  main.sass  selector.sass
ipython_ui/: Bokeh.ipynb
iruby_experiment/: Mongo Experiment.ipynb  Untitled.ipynb  start.sh
node_server/: package.json  server.js
node_server/angular_ui/: gulpfile.js  index.html  index.jade  package.json
node_server/angular_ui/css/: chart.css  result-suite.css  view-editor.css
node_server/angular_ui/js/: app.js  d3.js  data-set.js  data_set.js  detail-view.js  hover-effect.js  percentage-bar.js  result-chart-data.js  result-chart.js  result-controller.js  result-range.js  result-set.js  result-suite.js  result-view-params.js  result.js  utils.js  view-editor.js  zoom-chart.js
node_server/angular_ui/templates/: detail-view.jade  percentage-bar.jade  result-suite.jade  view-editor.html  view-editor.jade  zoom-chart.html  zoom-chart.jade
server/: pubspec.yaml
server/web/: c.css  chart.dart  chart_data.dart  class_row.dart  index.dart  index.html  result.dart  result_list.dart  time_values.dart
stylesheets/: stylesheet.css
test/: BaseTest.rb  TestUtils.rb
test/cpp/: CMakeLists.txt  cpp_test.cpp
test/cppTest/: build.sh  cppTest.pro  tst_cpptesttest.cpp
test/python/: test.py
test/ruby/: BaseTest.rb  GenerateDummyData.rb  ServerTest.rb  TestUtils.rb
test/sampleExport/: cpp.json  ruby.json
